--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				
 					<div class="pf_category__inner">
 					<div class="pf_category__media">
-					<div class="imgitem"><img src="../../img/logo/images/cat1.png" alt=""></div>
+					<div class="imgitem"><img src="img/logo/images/cat1.png" alt=""></div>
 					</div>
 					<span class="pf_category__title">						
 					Экспертиза и оценка						
